# great-repository-names-are-short-and-memorable

./: .gitignore  CMakeLists.txt  main.cpp  singleton.h
